--- a/app.json
+++ b/app.json
@@ -31,7 +31,17 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+        "@react-native-google-signin/google-signin",
+        { "platforms": ["android", "ios"] }
+      ],
+      [
+        "expo-image-picker",
+        { "photosPermission": "The app uses photos for setting your avatar." }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     }
